creating Base form and main program form

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -35,6 +35,12 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BaseForm.Designer.cs">
+      <DependentUpon>BaseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ePlayerChar.cs" />
     <Compile Include="SettingsDialog.cs">
       <SubType>Form</SubType>
@@ -43,6 +49,12 @@
       <DependentUpon>SettingsDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="UserInterface.cs" />
+    <Compile Include="XMixDrix.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="XMixDrix.Designer.cs">
+      <DependentUpon>XMixDrix.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Ex02.ConsoleUtils">
@@ -58,8 +70,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="BaseForm.resx">
+      <DependentUpon>BaseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SettingsDialog.resx">
       <DependentUpon>SettingsDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="XMixDrix.resx">
+      <DependentUpon>XMixDrix.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
